Fix Team page hero image and CTA spacing - Update hero image from .png to .jpg and darken overlay by 10% - Fix CTA card spacing to match index and about pages by overriding team-specific CSS rules

--- a/about.html
+++ b/about.html
@@ -167,6 +167,29 @@
 
     <main>
         <h1 class="visually-hidden">About Bloom'n Events Co</h1>
+        
+        <!-- HERO SECTION -->
+        <section class="hero-section" aria-label="Hero">
+            <div class="hero-background">
+                <img src="images/Centuria 50th Birthday/e0293b65-2d54-4611-89fa-b71439ce701d.jpg" class="hero-image" alt="About Bloom'n Events Co - Creating unforgettable experiences" loading="eager" decoding="async" width="1600" height="900">
+                <div class="hero-overlay"></div>
+            </div>
+            <div class="hero-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 text-center">
+                            <h1 class="hero-headline hero-animate-fade-in">Crafting Moments That Move People</h1>
+                            <p class="hero-subhead hero-animate-fade-in hero-animate-delay-1">A family-founded company driven by purpose and passion. We bring connection, joy, and beauty to every corner of Western Australia through inspired, sustainable event experiences.</p>
+                            <div class="hero-cta hero-animate-fade-in hero-animate-delay-2">
+                                <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get in Touch</a>
+                                <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Work</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section class="section-main" aria-labelledby="whoWeWere">
             <div class="container">
                 <h2 id="whoWeWere" class="display-4 heading-blush-bg content-heading-large text-center">Who we were...</h2>
@@ -282,15 +305,15 @@
             <div class="container">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12">
-                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
-                            <h2 id="aboutHeroHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-2">Vision</h2>
-                            <p class="mb-0 text-charcoal">To bring connection, joy, and beauty to every corner of Western Australia — transforming moments into memories through inspired, sustainable event experiences.</p>
+                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px; text-align: center;">
+                            <h2 id="aboutHeroHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-3">Vision</h2>
+                            <p class="mb-0 text-charcoal" style="text-align: center; max-width: 100% !important; width: 100% !important; margin: 0 auto;">To bring connection, joy, and beauty to every corner of Western Australia — transforming moments into memories through inspired, sustainable event experiences.</p>
                         </div>
                     </div>
                     <div class="col-12">
-                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
-                            <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-2">Mission</h2>
-                            <p class="mb-0 text-charcoal">We're a family-founded company driven by purpose and passion. We craft immersive artistic activations and design unforgettable events that uplift, connect, and give back. By working with other local businesses, with the same creed and supporting regional communities, we prove that business success and compassion can grow side by side.</p>
+                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px; text-align: center;">
+                            <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-3">Mission</h2>
+                            <p class="mb-0 text-charcoal" style="text-align: center; max-width: 100% !important; width: 100% !important; margin: 0 auto;">We're a family-founded company driven by purpose and passion. We craft immersive artistic activations and design unforgettable events that uplift, connect, and give back. By working with other local businesses, with the same creed and supporting regional communities, we prove that business success and compassion can grow side by side.</p>
                         </div>
                     </div>
                 </div>
@@ -334,6 +357,26 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FINAL CTA SECTION -->
+        <section class="section-main" aria-labelledby="aboutCtaHeading">
+            <div class="container">
+                <h2 id="aboutCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Create Something Amazing Together?</h2>
+                <div class="card shadow cta-card">
+                    <div class="card-body text-center p-5">
+                        <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                        <div class="cta-buttons">
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
+                        </div>
+                        <p class="text-charcoal mt-4 mb-0">
+                            <i class="bi bi-telephone-fill"></i> <a href="tel:1800826268" class="text-gold">1800 826 268</a> | 
+                            <i class="bi bi-envelope-fill"></i> <a href="mailto:enquiries@bloomneventsco.com.au" class="text-gold">enquiries@bloomneventsco.com.au</a>
+                        </p>
                     </div>
                 </div>
             </div>
