--- a/events.html
+++ b/events.html
@@ -266,13 +266,13 @@
                 <div class="row g-3 justify-content-center mb-5">
                     <div class="col-12">
                         <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
-                            <p class="lead text-charcoal mb-3">
+                            <p class="lead text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 <b>Bloom'n Events Co.</b> delivers immersive corporate experiences designed to connect, elevate, and inspire. From single-day activations to multiday retreats, our events span networking, professional development, leadership, and brand engagement across Perth and Western Australia.
                             </p>
-                            <p class="text-charcoal mb-3">
+                            <p class="text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 We design thoughtfully curated environments that empower professionals to connect, collaborate, learn, and thrive together. From dynamic B2B showcases and immersive executive training sessions to bespoke branded activations, every event is carefully tailored to reflect your team's unique culture, core message, and strategic objectives.
                             </p>
-                            <p class="text-charcoal mb-0">
+                            <p class="text-charcoal mb-0" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 Based in Brookton, WA, we serve businesses throughout Perth and regional Western Australia, bringing 40+ years of combined expertise in event planning, design, and technical execution to every project.
                             </p>
                         </div>
