--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-10 text-center">
-                            <h1 class="hero-headline">Transform Your Vision Into Unforgettable Experiences</h1>
-                            <p class="hero-subhead">Professional event planning, creative workshops, and custom displays across Perth and Western Australia. We bring engineering, artistry, and innovation together to create moments that move people.</p>
-                            <div class="hero-cta">
+                            <h1 class="hero-headline hero-animate-fade-in">Transform Your Vision Into Unforgettable Experiences</h1>
+                            <p class="hero-subhead hero-animate-fade-in hero-animate-delay-1">Professional event planning, creative workshops, and custom displays across Perth and Western Australia. We bring engineering, artistry, and innovation together to create moments that move people.</p>
+                            <div class="hero-cta hero-animate-fade-in hero-animate-delay-2">
                                 <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
                                 <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Work</a>
                             </div>
@@ -563,7 +563,7 @@
         <section class="section-main" aria-labelledby="preFooterCtaHeading">
             <div class="container">
                 <div class="heading-blush-bg text-center">
-                    <p id="preFooterCtaHeading" class="acknowledgement-text mb-0" style="font-size: 100%;">Bloom’n Events Co Pty Ltd acknowledges the Traditional Owners of the lands on which we live and work — the Noongar people — and pays our deepest respects to Elders past and present. We honour their enduring connection to land, waters, and community, and extend that respect to all First Nations peoples across Australia.</p>
+                    <p id="preFooterCtaHeading" class="acknowledgement-text mb-0">Bloom'n Events Co Pty Ltd acknowledges the Traditional Owners of the lands on which we live and work — the Noongar people — and pays our deepest respects to Elders past and present. We honour their enduring connection to land, waters, and community, and extend that respect to all First Nations peoples across Australia.</p>
                 </div>
             </div>
         </section>
