--- a/team.html
+++ b/team.html
@@ -153,6 +153,29 @@
 
     <main>
         <h1 class="visually-hidden">Bloom'n Events Co Team</h1>
+        
+        <!-- HERO SECTION -->
+        <section class="hero-section" aria-label="Hero">
+            <div class="hero-background">
+                <img src="images/KidsWorkshops/kidsworkshops05.jpg" class="hero-image" alt="Bloom'n Events Co Team - Creative and passionate professionals" loading="eager" decoding="async" width="1600" height="900">
+                <div class="hero-overlay"></div>
+            </div>
+            <div class="hero-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 text-center">
+                            <h1 class="hero-headline hero-animate-fade-in">Meet Our Bloom'n Powerhouse Team</h1>
+                            <p class="hero-subhead hero-animate-fade-in hero-animate-delay-1">A passionate, creative team bringing 40+ years of combined expertise in event planning, design, and community engagement. We're driven by purpose, fueled by innovation, and committed to creating moments that move people.</p>
+                            <div class="hero-cta hero-animate-fade-in hero-animate-delay-2">
+                                <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Work With Us</a>
+                                <a href="#foundersHeading" class="btn btn-outline-gold btn-lg mb-3">Meet the Team</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <!-- Founders Section -->
         <section class="section-main" aria-labelledby="foundersHeading">
             <div class="container">
@@ -308,6 +331,26 @@
                                 <p class="card-text text-charcoal">The Band</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FINAL CTA SECTION -->
+        <section class="section-main" aria-labelledby="teamCtaHeading">
+            <div class="container">
+                <h2 id="teamCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Work With Our Team?</h2>
+                <div class="card shadow cta-card">
+                    <div class="card-body text-center p-5">
+                        <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                        <div class="cta-buttons">
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
+                        </div>
+                        <p class="text-charcoal mt-4 mb-0">
+                            <i class="bi bi-telephone-fill"></i> <a href="tel:1800826268" class="text-gold">1800 826 268</a> | 
+                            <i class="bi bi-envelope-fill"></i> <a href="mailto:enquiries@bloomneventsco.com.au" class="text-gold">enquiries@bloomneventsco.com.au</a>
+                        </p>
                     </div>
                 </div>
             </div>
