--- a/workshops.html
+++ b/workshops.html
@@ -255,13 +255,13 @@
                 <div class="row g-3 justify-content-center mb-5">
                     <div class="col-12">
                         <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
-                            <p class="lead text-charcoal mb-3">
+                            <p class="lead text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 <b>Bloom'n Events Co.</b> delivers vibrant, hands-on workshop experiences designed to spark curiosity, creativity, and connection. From single-day activations to full school holiday programmes across Perth and Western Australia, we cover engaging themes like nature art, sustainability, food crafts, and creative learning.
                             </p>
-                            <p class="text-charcoal mb-3">
+                            <p class="text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 Every workshop is fun, educational, and fully customisable to match your event, season, or theme. We've successfully delivered workshops for <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="text-gold">Hawaiian Shopping Centres</a> and other leading Perth businesses, driving traffic and engagement.
                             </p>
-                            <p class="text-charcoal mb-0">
+                            <p class="text-charcoal mb-0" style="text-align: left; max-width: 100% !important; width: 100% !important;">
                                 Our workshops are suitable for kids, adults, seniors, and team-building events. We provide all materials, expert facilitation, and ensure every participant leaves with a sense of accomplishment and a beautiful creation.
                             </p>
                         </div>
