--- a/case-study-centuria-50th-birthday.html
+++ b/case-study-centuria-50th-birthday.html
@@ -260,7 +260,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="visualEvidenceHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-4">Visual Evidence</h2>
-                            <div id="centuria50thCarousel" class="carousel slide" data-bs-ride="carousel" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; overflow: hidden;">
+                            <div id="centuria50thCarousel" class="carousel slide" data-bs-ride="carousel" style="background-color: var(--coreChampers); border: none; border-radius: 12px; overflow: hidden;">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#centuria50thCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#centuria50thCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
