--- a/case-study-centuria-connect140.html
+++ b/case-study-centuria-connect140.html
@@ -247,7 +247,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="visualEvidenceHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-4">Visual Evidence</h2>
-                            <div id="connect140Carousel" class="carousel slide" data-bs-ride="carousel" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; overflow: hidden;">
+                            <div id="connect140Carousel" class="carousel slide" data-bs-ride="carousel" style="background-color: var(--coreChampers); border: none; border-radius: 12px; overflow: hidden;">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#connect140Carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#connect140Carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
