Fix responsive issues: case study carousel cutoff and chatbot top cutoff on mobile
- Fixed case study carousel cards being cut off on left side by breaking out of container padding with negative margins
- Added overflow-x: visible to section-main and container on mobile to allow carousel breakout
- Fixed chatbot container top cutoff by reducing height and adding proper overflow handling
- Enhanced responsive typography with clamp() for fluid scaling
- Standardized container padding and responsive spacing system
- Added mobile-first responsive utilities for cards, buttons, and images
- Improved touch target sizes for accessibility (44x44px minimum)
- Created comprehensive responsive system documentation

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
 </head>
 
 <body class="home">
+    <!-- Skip to main content link for keyboard navigation -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <!-- FLOATING NAVBAR -->
     <nav id="homeNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom" aria-label="Primary" style="position:fixed;bottom:0;left:0;right:0;">
         <div class="container">
@@ -296,7 +298,7 @@
         </div>
     </nav>
 
-    <main>
+    <main id="main-content">
         <h1 class="visually-hidden">Bloom'n Events Co - Professional Event Planning & Displays</h1>
         
         <!-- HERO SECTION -->
@@ -555,8 +557,8 @@
                         <div class="carousel-item active text-center">
                             <div class="testimonial-item">
                                 <img src="images/Testimonials/testimonial-1.png" 
-                                     alt="Hawaiian" 
-                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50">
+                                     alt="Hawaiian Shopping Centres logo" 
+                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
                                 <h3 class="testimonial-name">Sophie Brinklow</h3>
                                 <p class="testimonial-position mb-3">Marketing Executive, Suburban Shopping Centres, Hawaiian</p>
                                 <div class="testimonial-content p-4 rounded">
@@ -567,8 +569,8 @@
                         <div class="carousel-item text-center">
                             <div class="testimonial-item">
                                 <img src="images/Testimonials/testimonial-2.png" 
-                                     alt="Centuria" 
-                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50">
+                                     alt="Centuria Capital logo" 
+                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
                                 <h3 class="testimonial-name">Val Neal</h3>
                                 <p class="testimonial-position mb-3">Customer Service Manager, One Forty St Georges</p>
                                 <div class="testimonial-content p-4 rounded">
@@ -579,8 +581,8 @@
                         <div class="carousel-item text-center">
                             <div class="testimonial-item">
                                 <img src="images/Testimonials/testimonial-3.png" 
-                                     alt="Shane Di Lello" 
-                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50">
+                                     alt="Hawaiian Shopping Centres logo" 
+                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
                                 <h3 class="testimonial-name">Sarah Moore</h3>
                                 <p class="testimonial-position mb-3">Portfolio Marketing Manager, Hawaiian Pty Ltd</p>
                                 <div class="testimonial-content p-4 rounded">
@@ -700,14 +702,14 @@
     <!-- CHATBOT WIDGET -->
     <div id="chatbot-widget" class="chatbot-widget">
         <button id="chatbot-toggle" class="chatbot-toggle" type="button" aria-label="Open chat" aria-controls="chatbot-container" aria-expanded="false">
-            <img src="images/butterfly-icon.svg" alt="Chat" class="chatbot-toggle-icon" width="40" height="40">
+            <img src="images/butterfly-icon.svg" alt="Open chat with Bloom'n Events Co" class="chatbot-toggle-icon" width="40" height="40" loading="lazy" decoding="async">
             <span class="chatbot-notification" id="chatbot-notification">1</span>
         </button>
         
         <div id="chatbot-container" class="chatbot-container">
             <div class="chatbot-header">
                 <div class="chatbot-header-content">
-                    <img src="images/logo-wht.png" alt="Bloom'n Events Co" class="chatbot-logo">
+                    <img src="images/logo-wht.png" alt="Bloom'n Events Co logo" class="chatbot-logo" loading="lazy" decoding="async">
                     <div class="chatbot-header-text">
                         <h4>Bloom'n Events Co</h4>
                         <p>How can we help you today?</p>
@@ -721,7 +723,7 @@
             <div class="chatbot-messages" id="chatbot-messages" role="log" aria-live="polite" aria-relevant="additions">
                 <div class="chatbot-message chatbot-message-bot">
                     <div class="chatbot-avatar">
-                        <img src="images/butterfly-icon.svg" alt="Bloom'n Events Co" class="chatbot-avatar-icon" width="32" height="32">
+                        <img src="images/butterfly-icon.svg" alt="Bloom'n Events Co chatbot avatar" class="chatbot-avatar-icon" width="32" height="32" loading="lazy" decoding="async">
                     </div>
                     <div class="chatbot-message-content">
                         <p>Hello! I'm here to help you with your event planning needs. What would you like to know about our services?</p>
