--- a/team.html
+++ b/team.html
@@ -283,9 +283,9 @@
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3">
                     <!-- Team Member 6 -->
                     <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
-                            <div class="team-member-image" style="height: 400px;">
-                                <img src="images/Team/team-member-6.jpg" alt="Neeno - Music Maestro" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div class="card team-card shadow h-100 team-card-shadow">
+                            <div class="team-member-image">
+                                <img src="images/Team/team-member-6.jpg" alt="Neeno - Music Maestro" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Neeno</h3>
@@ -296,9 +296,9 @@
 
                     <!-- Team Member 7 -->
                     <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
-                            <div class="team-member-image" style="height: 400px;">
-                                <img src="images/Team/team-member-7.jpg" alt="Sarah - Marketing Genius" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div class="card team-card shadow h-100 team-card-shadow">
+                            <div class="team-member-image">
+                                <img src="images/Team/team-member-7.jpg" alt="Sarah - Marketing Genius" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Sarah</h3>
@@ -309,9 +309,9 @@
 
                     <!-- Team Member 8 -->
                     <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
-                            <div class="team-member-image" style="height: 400px;">
-                                <img src="images/Team/team-member-8.jpeg" alt="Bronwyn - Child Whisperer" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div class="card team-card shadow h-100 team-card-shadow">
+                            <div class="team-member-image">
+                                <img src="images/Team/team-member-8.jpeg" alt="Bronwyn - Child Whisperer" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Bronwyn</h3>
@@ -322,9 +322,9 @@
 
                     <!-- Team Member 9 -->
                     <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
-                            <div class="team-member-image" style="height: 400px;">
-                                <img src="images/Team/Team-member-9.jpg" alt="Shimmer - The Band" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div class="card team-card shadow h-100 team-card-shadow">
+                            <div class="team-member-image">
+                                <img src="images/Team/Team-member-9.jpg" alt="Shimmer - The Band" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Shimmer</h3>
