Add testimonials to case study pages, update carousel heights to 1250px, ensure 2-column bullet lists across all pages, fix testimonial logo sizing to 200x50px

--- a/case-study-centuria-breast-cancer.html
+++ b/case-study-centuria-breast-cancer.html
@@ -291,6 +291,20 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="resultsHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Results</h2>
+                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
+                                <div class="card-body text-center">
+                                    <div class="testimonial-item">
+                                        <img src="images/Testimonials/testimonial-2.png" 
+                                             alt="Centuria Capital logo" 
+                                             class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
+                                        <h3 class="testimonial-name">Val Neal</h3>
+                                        <p class="testimonial-position mb-3">Customer Service Manager, One Forty St Georges</p>
+                                        <div class="testimonial-content p-4 rounded">
+                                            <p class="mb-0">"We couldn't have done it without you. Everyone loved the concept."</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">The Outcome</h3>
