--- a/case-study-hawaiian-forrestfield.html
+++ b/case-study-hawaiian-forrestfield.html
@@ -315,12 +315,16 @@
                             <h2 id="resultsHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Results</h2>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
                                 <div class="card-body text-center">
-                                    <blockquote class="blockquote mb-0">
-                                        <p>"Tamara and Anton were given the brief to provide a one-day event at Hawaiian's Forrestfield that celebrated the opening of a key tenant, but also highlighted the diversity of our food offering at the Centre. We wanted to create a fun and engaging family friendly activation that encouraged dwell and participation. Every aspect of the event was managed with professionalism and attention to detail, ensuring a seamless experience for both our retailers and the community. We highly recommend Bloom n Co for their creativity, organisation, and commitment to delivering outstanding results."</p>
-                                        <footer class="blockquote-footer mt-2">
-                                            <strong>Sophie Brinklow</strong>, Marketing Executive, Suburban Shopping Centres, Hawaiian
-                                        </footer>
-                                    </blockquote>
+                                    <div class="testimonial-item">
+                                        <img src="images/Testimonials/testimonial-1.png" 
+                                             alt="Hawaiian Shopping Centres logo" 
+                                             class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
+                                        <h3 class="testimonial-name">Sophie Brinklow</h3>
+                                        <p class="testimonial-position mb-3">Marketing Executive, Suburban Shopping Centres, Hawaiian</p>
+                                        <div class="testimonial-content p-4 rounded">
+                                            <p class="mb-0">"Tamara and Anton were given the brief to provide a one-day event at Hawaiian's Forrestfield that celebrated the opening of a key tenant, but also highlighted the diversity of our food offering at the Centre. We wanted to create a fun and engaging family friendly activation that encouraged dwell and participation. Every aspect of the event was managed with professionalism and attention to detail, ensuring a seamless experience for both our retailers and the community. We highly recommend Bloom n Co for their creativity, organisation, and commitment to delivering outstanding results."</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
