--- a/case-study-hawaiian-neighbourhood-nibbles.html
+++ b/case-study-hawaiian-neighbourhood-nibbles.html
@@ -285,12 +285,16 @@
                             <h2 id="resultsHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Results</h2>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
                                 <div class="card-body text-center">
-                                    <blockquote class="blockquote mb-0">
-                                        <p>"Hawaiian engaged Bloom'n Events Co to run a food-based July school holiday activity across five of our suburban neighbourhood assets in 5 days. The activity was not only unique but beautifully presented, with every detail considered. Commercially, the activities drove traffic uplifts and encouraged dwell amongst our most valuable market segment – families. We would not hesitate to engage the Bloom'n team again."</p>
-                                        <footer class="blockquote-footer mt-2">
-                                            <strong>Sarah Moore</strong>, Portfolio Marketing Manager, Hawaiian Pty Ltd
-                                        </footer>
-                                    </blockquote>
+                                    <div class="testimonial-item">
+                                        <img src="images/Testimonials/testimonial-3.png" 
+                                             alt="Hawaiian Shopping Centres logo" 
+                                             class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
+                                        <h3 class="testimonial-name">Sarah Moore</h3>
+                                        <p class="testimonial-position mb-3">Portfolio Marketing Manager, Hawaiian Pty Ltd</p>
+                                        <div class="testimonial-content p-4 rounded">
+                                            <p class="mb-0">"Hawaiian engaged Bloom'n Events Co to run a food-based July school holiday activity across seven of our suburban neighbourhood assets. The activity was not only unique but beautifully presented, with every detail considered. Commercially, the activities drove traffic uplifts and encouraged dwell amongst our most valuable market segment – families. We would not hesitate to engage the Bloom'n team again."</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
