--- a/case-study-centuria-connect140.html
+++ b/case-study-centuria-connect140.html
@@ -316,12 +316,16 @@
                             <h2 id="resultsHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Results</h2>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
                                 <div class="card-body text-center">
-                                    <blockquote class="blockquote mb-0">
-                                        <p>"We couldn't have done it without you. Everyone loved the concept."</p>
-                                        <footer class="blockquote-footer mt-2">
-                                            <strong>Val Neal</strong>, Customer Service Manager, 140 St Georges
-                                        </footer>
-                                    </blockquote>
+                                    <div class="testimonial-item">
+                                        <img src="images/Testimonials/testimonial-2.png" 
+                                             alt="Centuria Capital logo" 
+                                             class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
+                                        <h3 class="testimonial-name">Val Neal</h3>
+                                        <p class="testimonial-position mb-3">Customer Service Manager, One Forty St Georges</p>
+                                        <div class="testimonial-content p-4 rounded">
+                                            <p class="mb-0">"We couldn't have done it without you. Everyone loved the concept."</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
